Add images in recipe pages

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -8,7 +8,13 @@
 <body>
     <h1>Sushi</h1>
 
-    <a href="../index.html">Home</a>
+   
 
+    <img src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
+
+
+
+
+    <a href="../index.html">Home</a>
     </body>
 </html>
