--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,12 @@
 <body>
     <h1>Pizza</h1>
 
-    <a href="../index.html">Home</a>
+    
 
+    <img src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
+
+
+
+    <a href="../index.html">Home</a>
     </body>
 </html>
