--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -8,7 +8,13 @@
 <body>
     <h1>Taco</h1>
 
-    <a href="../index.html">Home</a>
+    
 
+    <img src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
+
+
+
+
+    <a href="../index.html">Home</a>
     </body>
 </html>
