Add description for recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,12 +8,16 @@
 <body>
     <h1>Pizza</h1>
 
-    
-
     <img src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
 
-
+    <h2>Description</h2>
+    <p>
+        Neapolitan pizza originated in Naples, Italy, hundreds of years ago. It is a round-shaped,
+        sleek crust pizza. The tomatoes are traditionally either San Marzano tomatoes or pomodorini
+        del Piennolo del Vesuvio, which grow on the volcanic plains to the south of Mount Vesuvius, 
+        and the cheese is traditionally mozzarella di bufala campana or fior di latte di Agerola.
+    </p>
 
     <a href="../index.html">Home</a>
-    </body>
+</body>
 </html>
