--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -8,13 +8,16 @@
 <body>
     <h1>Sushi</h1>
 
-   
-
     <img src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
 
-
-
+    <h2>Description</h2>
+    <p>
+        Uramaki sushi (also called “inside out roll”) is a sushi roll made of sushi rice, 
+        filling and a sheet of nori seaweed, rolled so that the nori is on the inside and 
+        the rice is on the outside. The filling often consists of 2 or 3 different ingredients. 
+        On top of the rice you will often find Massago, Tobiko or sesame seeds.
+    </p>
 
     <a href="../index.html">Home</a>
-    </body>
+</body>
 </html>
