--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -8,13 +8,18 @@
 <body>
     <h1>Taco</h1>
 
-    
-
     <img src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
 
-
-
+    <h2>Description</h2>
+    <p>
+        A carnitas taco is a traditional Mexican dish featuring succulent, 
+        slow-cooked pulled pork that is tender, juicy, and has delicious crispy, 
+        caramelized edges. The pork is typically nestled in a warm corn tortilla and
+        topped with simple, fresh garnishes. The process takes three to four hours, 
+        and the result is very tender and juicy meat, which is then typically served 
+        with chopped cilantro, diced onion, salsa, guacamole, tortillas, and refried beans.
+    </p>
 
     <a href="../index.html">Home</a>
-    </body>
+</body>
 </html>
