Add ingredients for recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -18,6 +18,19 @@
         and the cheese is traditionally mozzarella di bufala campana or fior di latte di Agerola.
     </p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Italian tipo "00" flour</li>
+        <li>Kosher salt</li>
+        <li>Instant yeast</li>
+        <li>Sugar</li>
+        <li>Water</li>
+        <li>Peeled Italian tomatoes</li>
+        <li>Fresh mozzarella cheese</li>
+        <li>Extra virgin olive oil</li>
+        <li>Basil Leaves</li>
+    </ul>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
