--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -18,6 +18,18 @@
         On top of the rice you will often find Massago, Tobiko or sesame seeds.
     </p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Cooked Japanese sushi rice</li>
+        <li>Sushi vinegar</li>
+        <li>Sashimi grade fish</li>
+        <li>Cucumber</li>
+        <li>Nori seaweed</li>
+        <li>Sprig dill</li>
+        <li>Wasabi</li>
+        <li>Soy Sauce</li>
+    </ul>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
