--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -20,6 +20,24 @@
         with chopped cilantro, diced onion, salsa, guacamole, tortillas, and refried beans.
     </p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Onions</li>
+        <li>Fresh cilantro leaves and stem</li>
+        <li>Boneless pork shoulder</li>
+        <li>Kosher salt</li>
+        <li>Orange</li>
+        <li>Garlic</li>
+        <li>Bay leaves</li>
+        <li>Cinnamon stick</li>
+        <li>Vegetable oil</li>
+        <li>Tomatillos</li>
+        <li>Jalapeno Peppers</li>
+        <li>Corn tortillas</li>
+        <li>Crumbled queso fresco</li>
+        <li>Lime</li>
+    </ul>
+
     <a href="../index.html">Home</a>
 </body>
 </html>
