--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/pizza.html">Pizza</a> 
-    <br>
-
-    <a href="recipes/sushi.html">Sushi</a>
-    <br>
-
-    <a href="recipes/taco.html">Taco</a>
-    <br>
+    <ul>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/sushi.html">Sushi</a></li>
+        <li><a href="recipes/taco.html">Taco</a></li>
+    </ul>
+   
 </body>
 </html>
