--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi</title>
 </head>
+
 <body>
     <h1>Sushi</h1>
 
@@ -12,9 +14,9 @@
 
     <h2>Description</h2>
     <p>
-        Uramaki sushi (also called “inside out roll”) is a sushi roll made of sushi rice, 
-        filling and a sheet of nori seaweed, rolled so that the nori is on the inside and 
-        the rice is on the outside. The filling often consists of 2 or 3 different ingredients. 
+        Uramaki sushi (also called “inside out roll”) is a sushi roll made of sushi rice,
+        filling and a sheet of nori seaweed, rolled so that the nori is on the inside and
+        the rice is on the outside. The filling often consists of 2 or 3 different ingredients.
         On top of the rice you will often find Massago, Tobiko or sesame seeds.
     </p>
 
@@ -34,35 +36,48 @@
     <ol>
         <li>
             <p>
-                Moisten the inside of a sushi rice mixing bowl or a large bowl to prevent the rice from sticking. The rice needs to be freshly cooked and hot when preparing sushi rice. Place the 660g cooked japanese rice in the bowl and add the 50ml sushi vinegar. Gently mix the vinegar into the rice using a rice paddle until the vinegar is well incorporated. Let the sushi rice cool down to room temperature. Cover the sushi rice with a moistened tea towel to prevent the rice from drying out.
+                Moisten the inside of a sushi rice mixing bowl or a large bowl to prevent the rice from sticking. The
+                rice needs to be freshly cooked and hot when preparing sushi rice. Place the 660g cooked japanese rice
+                in the bowl and add the 50ml sushi vinegar. Gently mix the vinegar into the rice using a rice paddle
+                until the vinegar is well incorporated. Let the sushi rice cool down to room temperature. Cover the
+                sushi rice with a moistened tea towel to prevent the rice from drying out.
             </p>
         </li>
 
         <li>
             <p>
-                Cut the1 sheet nori seaweed into halves, and then place half of the nori on the sushi mat shiny side down. As a golden rule, the shiny side of the nori seaweed should always be on the outside of the sushi.
+                Cut the1 sheet nori seaweed into halves, and then place half of the nori on the sushi mat shiny side
+                down. As a golden rule, the shiny side of the nori seaweed should always be on the outside of the sushi.
             </p>
         </li>
 
         <li>
             <p>
-                Place roughly 110g of sushi rice on the nori seaweed and spread across evenly. Place the sprig of dill on the rice. Flip the nori seaweed and sushi rice so that the nori seaweed is facing upward. Add a small portion of wasabi and place the two strips of cucumber and sashimi grade fish in the centre. Start rolling from the bottom, tucking the edge of the roll to fully enclose the filling. Lift the edge of the mat and continue to roll forward until the sushi is formed into a firm cylinder.
+                Place roughly 110g of sushi rice on the nori seaweed and spread across evenly. Place the sprig of dill
+                on the rice. Flip the nori seaweed and sushi rice so that the nori seaweed is facing upward. Add a small
+                portion of wasabi and place the two strips of cucumber and sashimi grade fish in the centre. Start
+                rolling from the bottom, tucking the edge of the roll to fully enclose the filling. Lift the edge of the
+                mat and continue to roll forward until the sushi is formed into a firm cylinder.
             </p>
         </li>
 
         <li>
             <p>
-                Slightly wet the blade of a sharp knife and slice the roll into 6 pieces. First, slice it into halves and then the halves into thirds. Clean the knife with a wet towel between cuts to prevent the rice from sticking to the knife.
+                Slightly wet the blade of a sharp knife and slice the roll into 6 pieces. First, slice it into halves
+                and then the halves into thirds. Clean the knife with a wet towel between cuts to prevent the rice from
+                sticking to the knife.
             </p>
         </li>
 
         <li>
             <p>
-                Serve with soy sauce. Feel free to garnish with other foods such as white / black sesame seeds, tobiko, chives, etc.
+                Serve with soy sauce. Feel free to garnish with other foods such as white / black sesame seeds, tobiko,
+                chives, etc.
             </p>
         </li>
     </ol>
 
     <a href="../index.html">Home</a>
 </body>
+
 </html>
