--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taco</title>
 </head>
+
 <body>
     <h1>Taco</h1>
 
@@ -12,11 +14,11 @@
 
     <h2>Description</h2>
     <p>
-        A carnitas taco is a traditional Mexican dish featuring succulent, 
-        slow-cooked pulled pork that is tender, juicy, and has delicious crispy, 
+        A carnitas taco is a traditional Mexican dish featuring succulent,
+        slow-cooked pulled pork that is tender, juicy, and has delicious crispy,
         caramelized edges. The pork is typically nestled in a warm corn tortilla and
-        topped with simple, fresh garnishes. The process takes three to four hours, 
-        and the result is very tender and juicy meat, which is then typically served 
+        topped with simple, fresh garnishes. The process takes three to four hours,
+        and the result is very tender and juicy meat, which is then typically served
         with chopped cilantro, diced onion, salsa, guacamole, tortillas, and refried beans.
     </p>
 
@@ -42,35 +44,57 @@
     <ol>
         <li>
             <p>
-                Adjust oven rack to middle position and preheat oven to 275°F (135°C). Cut one onion into fine dice and combine with cilantro. Refrigerate until needed. Split remaining onion into quarters. Set aside. Season pork with 1 tablespoon salt and place in a 9- by 13-inch glass baking dish. The pork should fill the dish with no extra space. Split orange into quarters and squeeze juice over pork. Nestle squeezed orange pieces into dish. Add 2 onion quarters, 4 cloves garlic, bay leaves, and cinnamon stick to dish. Nestle everything into an even layer. Pour vegetable oil over surface. Cover dish tightly with aluminum foil and place in oven. Cook until pork is fork tender, about 3 1/2 hours.
+                Adjust oven rack to middle position and preheat oven to 275°F (135°C). Cut one onion into fine dice and
+                combine with cilantro. Refrigerate until needed. Split remaining onion into quarters. Set aside. Season
+                pork with 1 tablespoon salt and place in a 9- by 13-inch glass baking dish. The pork should fill the
+                dish with no extra space. Split orange into quarters and squeeze juice over pork. Nestle squeezed orange
+                pieces into dish. Add 2 onion quarters, 4 cloves garlic, bay leaves, and cinnamon stick to dish. Nestle
+                everything into an even layer. Pour vegetable oil over surface. Cover dish tightly with aluminum foil
+                and place in oven. Cook until pork is fork tender, about 3 1/2 hours.
             </p>
         </li>
 
         <li>
             <p>
-                Set large fine-mesh strainer over a 1-quart liquid measuring cup or bowl. Using tongs, remove and discard orange peel, onion, garlic, cinnamon stick, and bay leaves. Transfer pork, rendered fat, and cooking liquid to strainer. Let drain for 10 minutes. Transfer pork back to baking dish. You should end up with about 1/2 cup cooking liquid and 1/2 cup fat. Using a flat spoon or fat separator, skim fat from surface and add back to pork. Shred pork into large chunks with fingers or two forks. Season to taste with salt. Refrigerate until ready to serve. Transfer remaining cooking liquid to medium saucepan.
+                Set large fine-mesh strainer over a 1-quart liquid measuring cup or bowl. Using tongs, remove and
+                discard orange peel, onion, garlic, cinnamon stick, and bay leaves. Transfer pork, rendered fat, and
+                cooking liquid to strainer. Let drain for 10 minutes. Transfer pork back to baking dish. You should end
+                up with about 1/2 cup cooking liquid and 1/2 cup fat. Using a flat spoon or fat separator, skim fat from
+                surface and add back to pork. Shred pork into large chunks with fingers or two forks. Season to taste
+                with salt. Refrigerate until ready to serve. Transfer remaining cooking liquid to medium saucepan.
             </p>
         </li>
 
         <li>
             <p>
-                Add tomatillos, remaining 2 onion quarters, remaining 2 garlic cloves, and jalapeños to saucepan with strained pork liquid. Add water until it is about 1 inch below the top of the vegetables. Bring to a boil over high heat, reduce to a simmer, and cook until all vegetables are completely tender, about 10 minutes. Blend salsa with immersion blender or in a countertop blender until smooth. Season to taste with salt. Allow to cool and refrigerate until ready to use.
+                Add tomatillos, remaining 2 onion quarters, remaining 2 garlic cloves, and jalapeños to saucepan with
+                strained pork liquid. Add water until it is about 1 inch below the top of the vegetables. Bring to a
+                boil over high heat, reduce to a simmer, and cook until all vegetables are completely tender, about 10
+                minutes. Blend salsa with immersion blender or in a countertop blender until smooth. Season to taste
+                with salt. Allow to cool and refrigerate until ready to use.
             </p>
         </li>
 
         <li>
             <p>
-                To serve: Preheat broiler to high with oven rack 4 inches below heating element. Broil pork until brown and crisp on surface, about 6 minutes. Remove pork, stir with a spoon to expose new bits to heat, and broil again until crisp, 6 more minutes. Tent with foil to keep warm.
+                To serve: Preheat broiler to high with oven rack 4 inches below heating element. Broil pork until brown
+                and crisp on surface, about 6 minutes. Remove pork, stir with a spoon to expose new bits to heat, and
+                broil again until crisp, 6 more minutes. Tent with foil to keep warm.
             </p>
         </li>
 
         <li>
             <p>
-                Meanwhile, heat tortillas. Preheat an 8-inch cast iron skillet over medium-high heat until hot. Working one tortilla at a time, dip tortilla in bowl filled with water. Transfer to hot skillet and cook until water evaporates from first side and tortilla is browned in spots, about 30 seconds. Flip and cook until dry, about 15 seconds longer. Transfer tortilla to a tortilla warmer, or wrap in a clean dish towel. Repeat with remaining tortillas.
+                Meanwhile, heat tortillas. Preheat an 8-inch cast iron skillet over medium-high heat until hot. Working
+                one tortilla at a time, dip tortilla in bowl filled with water. Transfer to hot skillet and cook until
+                water evaporates from first side and tortilla is browned in spots, about 30 seconds. Flip and cook until
+                dry, about 15 seconds longer. Transfer tortilla to a tortilla warmer, or wrap in a clean dish towel.
+                Repeat with remaining tortillas.
             </p>
         </li>
     </ol>
 
     <a href="../index.html">Home</a>
 </body>
+
 </html>
