--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Pizza</h1>
+    <h1 class="heading">Pizza</h1>
 
     <img src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
 
