--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Sushi</h1>
+    <h1 class="heading">Sushi</h1>
 
     <img src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
 
