--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Taco</h1>
+    <h1 class="heading">Taco</h1>
 
     <img src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
 
