--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="heading">Odin Recipes</h1>
+
+    <img id="main-page-header" src="images/main-page-header.jpg" alt="Image with many types of food">
+
+    <p class="about">
+        Recipes is a website where you can explore different types of food and learn how to 
+        make them easily. Each recipe comes with a short description of the dish so you know
+        what it's about before cooking. You'll find a list of ingredients used in the recipe 
+        along with a clear, step-by-step method that's easy to follow, even for beginners. 
+        The website includes a variety of dishes from different cuisines, making it useful for 
+        everyday cooking as well as trying something new.
+    </p>
+
+    <h2 class="about">Click on any link below to know more about the recipe: </h2>
+
 
     <ul>
-        <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="recipes/sushi.html">Sushi</a></li>
-        <li><a href="recipes/taco.html">Taco</a></li>
+        <li class="recipe-link"><a href="recipes/pizza.html">Pizza</a></li>
+        <li class="recipe-link"><a href="recipes/sushi.html">Sushi</a></li>
+        <li class="recipe-link"><a href="recipes/taco.html">Taco</a></li>
     </ul>
 
 </body>
