Style headings and add specific color

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1 class="heading">Pizza</h1>
+    <h1 class="heading pizza">Pizza</h1>
 
     <img src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
 
-    <h2>Description</h2>
+    <h2 class="heading pizza">Description</h2>
     <p>
         Neapolitan pizza originated in Naples, Italy, hundreds of years ago. It is a round-shaped,
         sleek crust pizza. The tomatoes are traditionally either San Marzano tomatoes or pomodorini
@@ -21,7 +21,7 @@
         and the cheese is traditionally mozzarella di bufala campana or fior di latte di Agerola.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading pizza">Ingredients</h2>
     <ul>
         <li>Italian tipo "00" flour</li>
         <li>Kosher salt</li>
@@ -34,7 +34,7 @@
         <li>Basil Leaves</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading pizza">Steps</h2>
     <ol>
         <li>
             <p>
