--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1 class="heading">Sushi</h1>
+    <h1 class="heading sushi">Sushi</h1>
 
     <img src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
 
-    <h2>Description</h2>
+    <h2 class="heading sushi">Description</h2>
     <p>
         Uramaki sushi (also called “inside out roll”) is a sushi roll made of sushi rice,
         filling and a sheet of nori seaweed, rolled so that the nori is on the inside and
@@ -21,7 +21,7 @@
         On top of the rice you will often find Massago, Tobiko or sesame seeds.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading sushi">Ingredients</h2>
     <ul>
         <li>Cooked Japanese sushi rice</li>
         <li>Sushi vinegar</li>
@@ -33,7 +33,7 @@
         <li>Soy Sauce</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading sushi">Steps</h2>
     <ol>
         <li>
             <p>
