--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1 class="heading">Taco</h1>
+    <h1 class="heading taco">Taco</h1>
 
     <img src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
 
-    <h2>Description</h2>
+    <h2 class="heading taco">Description</h2>
     <p>
         A carnitas taco is a traditional Mexican dish featuring succulent,
         slow-cooked pulled pork that is tender, juicy, and has delicious crispy,
@@ -23,7 +23,7 @@
         with chopped cilantro, diced onion, salsa, guacamole, tortillas, and refried beans.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading taco">Ingredients</h2>
     <ul>
         <li>Onions</li>
         <li>Fresh cilantro leaves and stem</li>
@@ -41,7 +41,7 @@
         <li>Lime</li>
     </ul>
 
-    <h2>Taco</h2>
+    <h2 class="heading taco">Steps</h2>
     <ol>
         <li>
             <p>
