Change class name from about to info

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <img id="main-page-header" src="images/main-page-header.jpg" alt="Image with many types of food">
 
-    <p class="about">
+    <p class="info">
         Recipes is a website where you can explore different types of food and learn how to 
         make them easily. Each recipe comes with a short description of the dish so you know
         what it's about before cooking. You'll find a list of ingredients used in the recipe 
@@ -22,7 +22,7 @@
         everyday cooking as well as trying something new.
     </p>
 
-    <h2 class="about">Click on any link below to know more about the recipe: </h2>
+    <h2 class="info">Click on any link below to know more about the recipe: </h2>
 
 
     <ul>
