Add info class to desc. paragraphs, ingredients and steps

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,10 +11,10 @@
 <body>
     <h1 class="heading pizza">Pizza</h1>
 
-    <img src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
+    <img class="recipe-img" src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
 
     <h2 class="heading pizza">Description</h2>
-    <p>
+    <p class="info">
         Neapolitan pizza originated in Naples, Italy, hundreds of years ago. It is a round-shaped,
         sleek crust pizza. The tomatoes are traditionally either San Marzano tomatoes or pomodorini
         del Piennolo del Vesuvio, which grow on the volcanic plains to the south of Mount Vesuvius,
@@ -22,7 +22,7 @@
     </p>
 
     <h2 class="heading pizza">Ingredients</h2>
-    <ul>
+    <ul class="info">
         <li>Italian tipo "00" flour</li>
         <li>Kosher salt</li>
         <li>Instant yeast</li>
@@ -35,7 +35,7 @@
     </ul>
 
     <h2 class="heading pizza">Steps</h2>
-    <ol>
+    <ol class="info">
         <li>
             <p>
                 Combine flour, salt, yeast, and sugar in the bowl of a stand mixer fitted with a dough
