--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -11,10 +11,10 @@
 <body>
     <h1 class="heading sushi">Sushi</h1>
 
-    <img src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
+    <img class="recipe-img" src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
 
     <h2 class="heading sushi">Description</h2>
-    <p>
+    <p class="info">
         Uramaki sushi (also called “inside out roll”) is a sushi roll made of sushi rice,
         filling and a sheet of nori seaweed, rolled so that the nori is on the inside and
         the rice is on the outside. The filling often consists of 2 or 3 different ingredients.
@@ -22,7 +22,7 @@
     </p>
 
     <h2 class="heading sushi">Ingredients</h2>
-    <ul>
+    <ul class="info">
         <li>Cooked Japanese sushi rice</li>
         <li>Sushi vinegar</li>
         <li>Sashimi grade fish</li>
@@ -34,7 +34,7 @@
     </ul>
 
     <h2 class="heading sushi">Steps</h2>
-    <ol>
+    <ol class="info">
         <li>
             <p>
                 Moisten the inside of a sushi rice mixing bowl or a large bowl to prevent the rice from sticking. The
