--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -11,10 +11,10 @@
 <body>
     <h1 class="heading taco">Taco</h1>
 
-    <img src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
+    <img class="recipe-img" src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
 
     <h2 class="heading taco">Description</h2>
-    <p>
+    <p class="info">
         A carnitas taco is a traditional Mexican dish featuring succulent,
         slow-cooked pulled pork that is tender, juicy, and has delicious crispy,
         caramelized edges. The pork is typically nestled in a warm corn tortilla and
@@ -24,7 +24,7 @@
     </p>
 
     <h2 class="heading taco">Ingredients</h2>
-    <ul>
+    <ul class="info">
         <li>Onions</li>
         <li>Fresh cilantro leaves and stem</li>
         <li>Boneless pork shoulder</li>
@@ -42,7 +42,7 @@
     </ul>
 
     <h2 class="heading taco">Steps</h2>
-    <ol>
+    <ol class="info">
         <li>
             <p>
                 Adjust oven rack to middle position and preheat oven to 275°F (135°C). Cut one onion into fine dice and
