Change home page link position from bottom to top

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,6 +11,8 @@
 <body>
     <h1 class="heading pizza">Pizza</h1>
 
+    <a class="home-link" href="../index.html">Home</a>
+
     <img class="recipe-img" src="../images/neapolitan-pizza.jpg" alt="Neapolitan pizza" height="400">
 
     <h2 class="heading pizza">Description</h2>
@@ -108,7 +110,6 @@
         </li>
     </ol>
 
-    <a href="../index.html">Home</a>
 </body>
 
 </html>
