--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -11,6 +11,8 @@
 <body>
     <h1 class="heading sushi">Sushi</h1>
 
+    <a class="home-link" href="../index.html">Home</a>
+
     <img class="recipe-img" src="../images/uramaki-sushi.jpg" alt="Uramaki Sushi" height="400">
 
     <h2 class="heading sushi">Description</h2>
@@ -78,7 +80,6 @@
         </li>
     </ol>
 
-    <a href="../index.html">Home</a>
 </body>
 
 </html>
