--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -11,6 +11,8 @@
 <body>
     <h1 class="heading taco">Taco</h1>
 
+    <a class="home-link" href="../index.html">Home</a>
+
     <img class="recipe-img" src="../images/carnitas-taco.jpg" alt="Carnitas Taco" height="400">
 
     <h2 class="heading taco">Description</h2>
@@ -95,7 +97,6 @@
         </li>
     </ol>
 
-    <a href="../index.html">Home</a>
 </body>
 
 </html>
