Fix typo in sushi page steps section

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -49,7 +49,7 @@
 
         <li>
             <p>
-                Cut the1 sheet nori seaweed into halves, and then place half of the nori on the sushi mat shiny side
+                Cut the sheet nori seaweed into halves, and then place half of the nori on the sushi mat shiny side
                 down. As a golden rule, the shiny side of the nori seaweed should always be on the outside of the sushi.
             </p>
         </li>
